tempfile/dyn-clone/tests/ui/missing-supertrait.rs
pub trait MyTrait {}

dyn_clone::clone_trait_object!(MyTrait);

fn main() {}
